fix(List): remove ellipsis styles from pipe variant
Fixes Fixes: INSTUI-817

Test plan:
- navigate to list component
- turn on `canvas-a11y`
- scroll down to the "pipe" variant to ensure the focus ring
  gets applied to the `<Link>` examples... to better see
  this in action add <Link href="3"> to a few more of the
  list items within the Pipe variant

  side note: one side affect of this change is the piped list
  items will wrap if the screen gets too small/narrow
  will be adding a reusable component to handle ellipsis
  down the road

Reviewed-on: https://gerrit.instructure.com/131932
Tested-by: Jenkins
Product-Review: Ken Meleta <kmeleta@instructure.com>
QA-Review: Dan Sasaki <dsasaki@instructure.com>

--- a/packages/ui-core/src/components/List/ListItem/styles.css
+++ b/packages/ui-core/src/components/List/ListItem/styles.css
@@ -18,9 +18,6 @@
 .pipe {
   display: inline-block;
   vertical-align: middle;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
   max-width: 100%;
   box-sizing: border-box;
   border-inline-end: var(--pipeBorderWidth) solid var(--pipeBorderColor);
